# SolarSystem

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  solarsystem
fonts/: OFL.txt
include/: compute.h  constants.h  date.h  display.h  main.h  shape.h
src/: compute.c  constants.c  date.c  display.c  main.c  shape.c
